--- a/languages/en_US.po
+++ b/languages/en_US.po
@@ -1,15 +1,15 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MailPoet Add-Ons Manager\n"
-"POT-Creation-Date: 2014-01-07 14:43+0100\n"
-"PO-Revision-Date: 2014-01-07 14:44+0100\n"
-"Last-Translator: \n"
+"POT-Creation-Date: 2014-01-10 11:48+0100\n"
+"PO-Revision-Date: 2014-01-10 11:48+0100\n"
+"Last-Translator: Sebastien <sebastien@sebs-studio.com>\n"
 "Language-Team: Seb's Studio <sebastien@sebs-studio.com>\n"
 "Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.5.5\n"
+"X-Generator: Poedit 1.6.3\n"
 "X-Poedit-KeywordsList: _;gettext;gettext_noop;__;_e\n"
 "X-Poedit-Basepath: ../\n"
 "X-Poedit-SourceCharset: UTF-8\n"
@@ -34,8 +34,8 @@ msgstr ""
 #: mailpoet-add-ons-manager.php:246
 #, php-format
 msgid ""
-"MailPoet Add-Ons requires MailPoet. Please install and activate <a href=\"%s"
-"\">MailPoet</a> first."
+"MailPoet Add-On Manager requires MailPoet. Please install and activate <a "
+"href=\"%s\">MailPoet</a> first."
 msgstr ""
 
 #: classes/class-mailpoet-screen.php:89
@@ -51,8 +51,8 @@ msgstr ""
 
 #: include/add-ons-list.php:39
 msgid ""
-"Adds a new field to add to your forms so your visitors can subscriber to "
-"your MailPoet newsletters."
+"Adds a new field to add to your forms so your visitors can subscribe to your "
+"MailPoet newsletters."
 msgstr ""
 
 #: include/add-ons-list.php:66
